# Robotics_Cyber_Physical_LAB

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  compile_commands.json
csv/: Readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control_pkg/lib/control_pkg/: control_pid_p1_node  control_pid_p1_server  control_pid_p2_node  control_pid_r2_node
install/control_pkg/share/control_pkg/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/gazebo_plugin_sim/include/gazebo_plugin_sim/: platform2_plugin.hpp  platform_plugin_test.hpp  robot2_plugin.hpp
install/gazebo_plugin_sim/lib/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gazebo_plugin_sim/lib/log/: latest_build
install/gazebo_plugin_sim/share/gazebo_plugin_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/img_proc_pkg/lib/img_proc_pkg/: aruco_detector  calibrate_camera_charuco  calibrate_camera_charuco_node  img_proc_id_node  img_proc_node  img_proc_qr_detector  img_publ_test_node  img_subs_test_node
install/img_proc_pkg/share/img_proc_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/inv_kinematics_pkg/lib/inv_kinematics_pkg/: platform1_vel_server  platform1_vel_test_client  platform2_vel_server  platform2_vel_test_client  robot1_vel_server  robot2_vel_server
install/inv_kinematics_pkg/share/inv_kinematics_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/sim_pkg/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
log/: latest_build
src/Aruco_Calibration/: CMakeCache.txt  CMakeLists.txt
src/Aruco_Calibration/src/: ArucoDetection.py  calibration.py
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/src/: a_star_server.cpp  a_star_server_2.cpp  compute_trajectory.cpp  compute_trajectory_r1.cpp  compute_trajectory_r2.cpp  control_arm_pid_r1.cpp  control_arm_pid_r2.cpp  control_pid_p1_node.cpp  control_pid_p1_server.cpp  control_pid_p2_node.cpp  control_pid_r1_node.cpp  control_pid_r2_node.cpp  control_trajectory_r1.cpp  control_trajectory_r1_node.cpp  control_trajectory_r2.cpp  control_trajectory_r2_node.cpp  csv_r1.cpp  csv_r2.cpp  event_driven_control.cpp  event_driven_control_r1.cpp  event_driven_control_r2.cpp  test_control2.cpp  test_control3.cpp
src/gazebo_plugin_sim/: CMakeLists.txt  CMakeListsold.txt  package.xml
src/gazebo_plugin_sim/env-hooks/: gazebo_plugin_sim.sh.in
src/gazebo_plugin_sim/include/gazebo_plugin_sim/: platform1_plugin.hpp  real_time_factor_plugin.hpp  robot1_plugin.hpp
src/gazebo_plugin_sim/meshes/: Base.dae  Brazo1.STL  Brazo2.STL  C1.dae  C2.dae  Cubo1.dae  Cubo2.dae  Meca1_W1.STL  Meca1_W2.STL  Meca1_W3.STL  Meca1_W4.STL  Meca1_W5.STL  Meca1_W6.STL  Meca1_W7.STL  Meca1_W8.STL  Meca1_W9.STL  Meca2_W1.STL  Meca2_W2.STL  Meca2_W3.STL  Meca2_W4.STL  Meca2_W5.STL  Meca2_W6.STL  Meca2_W7.STL  Meca2_W8.STL  Meca2_W9.STL  Meca3_W1.STL  Meca3_W2.STL  Meca3_W3.STL  Meca3_W4.STL  Meca3_W5.STL  Meca3_W6.STL  Meca3_W7.STL  Meca3_W8.STL  Meca3_W9.STL  Meca4_W1.STL  Meca4_W2.STL  Meca4_W3.STL  Meca4_W4.STL  Meca4_W5.STL  Meca4_W6.STL  (+14 more)
src/gazebo_plugin_sim/src/: meca_platform_plugin_test.cpp  platform1_plugin.cpp  platform2_plugin.cpp  platform_plugin_test.cpp  real_time_factor_plugin.cpp  robot1_plugin.cpp  robot2_plugin.cpp
src/gazebo_plugin_sim/worlds/: 2Robots_aruco.world  2Robots_aruco_2.world  2platform.world  2robots_mod.world  Cooperative_task.world  mbot_empty.world
src/gui_pkg/: CMakeLists.txt  package.xml
src/gui_pkg/src/: test_gui.cpp
src/img_proc_pkg/: CMakeLists.txt  package.xml
src/img_proc_pkg/config/: camera_calib_charuco.yaml  camera_info.yaml  params.yaml  params_dsrl.yaml
src/img_proc_pkg/launch/: camera_launch.py  demo_cam_launch.py
src/img_proc_pkg/src/: aruco_detector.cpp  aruco_detector_v2.cpp  calibrate_camera_charuco.cpp  calibrate_camera_charuco_node.cpp  compute_position.cpp  img_proc_id_node.cpp  img_proc_node.cpp  img_proc_qr_detector.cpp  img_publ_test_node.cpp  img_subs_test_node.cpp
src/img_proc_pkg/src/Aruco_Calibration/: ArucoDetectionCpp.cpp  CMakeCache.txt  CMakeLists.txt  CalibrationUsingCpp1  CalibrationUsingCpp1.cpp  CalibrationUsingCpp2  CalibrationUsingCpp2.cpp  Calibration_UsingPython.py  Makefile  cmake_install.cmake
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ArmJointsPositions.msg  ControlData.msg  ControlFinish.msg  DataControl.msg  LimitSwitch.msg  MotorArmVels.msg  NewTaskMsg.msg  Path.msg  PlatformVel.msg  PositionTag.msg  Positions.msg  RobotObjective.msg  TaskDescription.msg  TaskMsg.msg  TaskReport.msg
src/interfaces/srv/: AStarService.srv  ArmVel.srv  RobotVel.srv  TaskListService.srv  TrajectoryControl.srv
src/inv_kinematics_pkg/: CMakeLists.txt  package.xml
src/inv_kinematics_pkg/src/: platform1_vel_server.cpp  platform1_vel_server_old.cpp  platform1_vel_test_client.cpp  platform2_vel_server.cpp  platform2_vel_test_client.cpp  robot1_vel_server.cpp  robot2_vel_server.cpp  robot_1_platform_vel_node.cpp  robot_1_platform_vel_server.cpp  robot_2_platform_vel_node.cpp  robot_2_platform_vel_server.cpp
src/jetson_pkg/: README.md
src/jetson_pkg/scripts/: encoder_counter.ino  encoder_counter_multiple.ino  readme.txt
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: gazebo_sim.launch.py  gazebo_test.launch.py  img_proc_nodes.launch.py  img_proc_nodes_r1.launch.py  img_proc_nodes_r2.launch.py  launchfordebug.launch.py  launchfordebugr1.launch.py  launchfordebugr2.launch.py  robot_1.launch.py  robot_1_nodes.launch.py  robot_2.launch.py  robot_2_nodes.launch.py  task_scheduler.launch.py
src/task_pkg/: CMakeLists.txt  package.xml
src/task_pkg/src/: task_manager_node.cpp  task_scheduler_node.cpp
src/uros_ws/: README.md
src/uros_ws/install/: local_setup.sh  setup.sh
src/uros_ws/log/: latest_build
(+325 files in other folders)
