<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_plugin_sim</name>
  <version>3.0.0</version>
  <description>
    Robot-independent Gazebo plugins for sensors, motors and dynamic reconfigurable components.
  </description>

  <license>BSD, Apache 2.0</license>

<maintainer email="jfr@jfr.com">JFR</maintainer>


  <author>JFR</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>std_msgs</depend>



  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>interfaces</build_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>